@@ -1663,9 +1663,9 @@ class UnicodeTest(
         tests = [(u'\U0001f49d', '&#128157;'),
                  (u'\ud83d', '&#55357;'),
                  (u'\udc9d', '&#56477;'),
-                 (u'\ud83d\udc9d', '&#128157;' if len(u'\U0001f49d') > 1 else
-                                  '&#55357;&#56477;'),
                 ]
+        if u'\ud83d\udc9d' != u'\U0001f49d':
+            tests += [(u'\ud83d\udc9d', '&#55357;&#56477;')]
         for s, exp in tests:
             self.assertEqual(
                     unicode_encodedecimal(u"123" + s, "xmlcharrefreplace"),
